# ellipse_detection

./: CMakeLists.txt  LICENSE  README.md  main.cpp
